--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,6 @@
     <ListView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:id="@+id/mainListView1"/>
+        android:id="@+id/sensorsListView"/>
 
 </LinearLayout>
