--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,15 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/sensorData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="" />
-
     <ListView
-        android:layout_height="match_parent"
+        android:id="@+id/sensorsListView"
         android:layout_width="match_parent"
-        android:id="@+id/sensorsListView"/>
+        android:layout_height="match_parent"/>
+
+    <Switch
+        android:id="@+id/switch2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Switch"/>
 
 </LinearLayout>
