--- a/app/src/main/res/layout/entry2.xml
+++ b/app/src/main/res/layout/entry2.xml
@@ -1,45 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/layoutData"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:baselineAligned="false"
-        android:orientation="vertical">
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/cbxSelected"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/tvSensorName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_weight="1"
-            android:text="加速度传感器(Accelerometer) 01234567890123456789012345678901234567890123456789"
+            android:text="加速度传感器(Accelerometer)"
             android:textSize="16sp"
             android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tvSensorInfo"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_weight="1"
             android:text="设备名称:xxx
-    设备版本:xxx
-    供应商:xxx012345678901234567890123456789012345678901234567890123456789"
+        设备版本:xxx
+        供应商:xxx"
             android:textSize="14sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:gravity="bottom"
             android:orientation="horizontal">
 
@@ -49,37 +48,34 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
-                android:text="0123456789012345678901234567890123456789012345678901234567890123456789"
+                android:text="0.00000
+        0.000000
+        0.000000"
                 android:textSize="14sp"/>
 
             <donlon.android.sensors.views.StretchedTextView
                 android:id="@+id/tvSensorDataUnit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_weight="1"
                 android:text="m/s2"
                 android:textAlignment="viewEnd"/>
 
         </LinearLayout>
+
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layoutRight"
+    <CheckBox
+        android:id="@+id/cbxSelected"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:checked="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"/>
 
-        <CheckBox
-            android:id="@+id/cbxSelected"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:checked="true"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"/>
-    </LinearLayout>
-
-</LinearLayout>
-
+</android.support.constraint.ConstraintLayout>
