--- a/app/src/main/res/layout/entry.xml
+++ b/app/src/main/res/layout/entry.xml
@@ -32,8 +32,8 @@
             android:layout_marginStart="20dp"
             android:layout_weight="1"
             android:text="设备名称:xxx
-    设备版本:xxx
-    供应商:xxx012345678901234567890123456789012345678901234567890123456789"
+设备版本:xxx
+供应商:aaa"
             android:textSize="14sp"/>
 
         <LinearLayout
@@ -68,10 +68,11 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <CheckBox
-            android:id="@+id/cbxSelected"
+            android:id="@+id/cbxEnabled"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
