--- a/app/src/main/res/layout-land/sensor_details_activity.xml
+++ b/app/src/main/res/layout-land/sensor_details_activity.xml
@@ -33,7 +33,7 @@
             android:text="@string/record"/>
 
         <Button
-            android:id="@+id/btnPause"
+            android:id="@+id/butnPause"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,23 +44,31 @@
 
     </LinearLayout>
 
-    <SurfaceView
-        android:id="@+id/surfaceView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        >
 
-    <TextView
-        android:id="@+id/tvValues"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:text=""/>
+        <TextView
+            android:id="@+id/tvValues"
+            android:layout_width="96dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:text=""/>
+
+        <SurfaceView
+            android:id="@+id/surfaceView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:paddingBottom="5dp"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
@@ -69,9 +77,8 @@
         <TextView
             android:id="@+id/tvHead"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="89"
-            android:gravity="bottom"
             android:text="@string/sensor_name"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -82,8 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|clip_horizontal"
             android:layout_weight="144"
-            android:gravity="clip_vertical"
-            android:text="sadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasa"
+            android:text="@string/sensor_name_2"
             android:textAlignment="viewEnd"
             tools:ignore="RtlCompat"/>
     </LinearLayout>
