--- a/app/src/main/res/layout/entry.xml
+++ b/app/src/main/res/layout/entry.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingBottom="4dp"
+    android:paddingTop="4dp">
 
     <LinearLayout
         android:id="@+id/layoutData"
@@ -13,28 +15,48 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:baselineAligned="false"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
-        <TextView
-            android:id="@+id/tvSensorName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="加速度传感器(Accelerometer) 01234567890123456789012345678901234567890123456789"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:orientation="horizontal"
+            >
+
+            <TextView
+                android:id="@+id/tvSensorPrimaryName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:text=""
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/tvSensorSecondaryName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text=""/>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvSensorInfo"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginStart="20dp"
             android:layout_weight="1"
-            android:text="设备名称:xxx
-设备版本:xxx
-供应商:aaa"
-            android:textSize="14sp"/>
+            android:text=""
+            android:textSize="14sp"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,16 +71,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
-                android:text="0123456789012345678901234567890123456789012345678901234567890123456789"
                 android:textSize="14sp"/>
 
-            <donlon.android.sensors.views.StretchedTextView
+            <TextView
                 android:id="@+id/tvSensorDataUnit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="m/s2"
-                android:textAlignment="viewEnd"/>
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textAlignment="viewEnd"
+                tools:ignore="RtlCompat"/>
 
         </LinearLayout>
     </LinearLayout>
