--- a/app/src/main/res/layout-land/sensor_details_activity.xml
+++ b/app/src/main/res/layout-land/sensor_details_activity.xml
@@ -51,17 +51,35 @@
         android:orientation="horizontal"
         >
 
-        <TextView
-            android:id="@+id/tvValues"
-            android:layout_width="96dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:text=""/>
+        <LinearLayout
+            android:layout_width="119dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <SurfaceView
+            <TextView
+                android:id="@+id/tvValue_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"/>
+
+            <TextView
+                android:id="@+id/tvValue_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"/>
+
+            <TextView
+                android:id="@+id/tvValue_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"/>
+        </LinearLayout>
+
+        <donlon.android.sensors.views.SensorDataSurfaceView
             android:id="@+id/surfaceView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
@@ -75,7 +93,7 @@
         android:paddingTop="5dp">
 
         <TextView
-            android:id="@+id/tvHead"
+            android:id="@+id/tvSensorPrimaryName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="89"
@@ -84,7 +102,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/tvHead2"
+            android:id="@+id/tvSensorSecondaryName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|clip_horizontal"
