--- a/app/src/main/res/layout/sample_sensor_data_view.xml
+++ b/app/src/main/res/layout/sample_sensor_data_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <donlon.android.sensors.SensorDataView
+    <donlon.android.sensors.views.SensorDataView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ccc"
