--- a/app/src/main/res/layout/sensor_details_activity.xml
+++ b/app/src/main/res/layout/sensor_details_activity.xml
@@ -44,18 +44,38 @@
 
     </LinearLayout>
 
-    <SurfaceView
+    <donlon.android.sensors.views.SensorDataSurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-    <TextView
-        android:id="@+id/tvValues"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:text=""/>
+        android:layout_height="wrap_content  "
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvValue_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView"/>
+
+        <TextView
+            android:id="@+id/tvValue_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView"/>
+
+        <TextView
+            android:id="@+id/tvValue_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,26 +84,26 @@
         android:paddingBottom="5dp"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
-        android:paddingTop="5dp">
+        android:paddingTop="3dp">
 
         <TextView
-            android:id="@+id/tvHead"
+            android:id="@+id/tvSensorPrimaryName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="89"
             android:gravity="bottom"
-            android:text="@string/sensor_name"
+            android:text="@string/sensor_primary_name"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/tvHead2"
+            android:id="@+id/tvSensorSecondaryName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|clip_horizontal"
             android:layout_weight="144"
             android:gravity="clip_vertical"
-            android:text="sadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasasadasa"
+            android:text="@string/sensor_secondary_name"
             android:textAlignment="viewEnd"
             tools:ignore="RtlCompat"/>
     </LinearLayout>
