--- a/app/src/main/res/layout/sensors_preview_list_entry.xml
+++ b/app/src/main/res/layout/sensors_preview_list_entry.xml
@@ -27,13 +27,12 @@
 
             <TextView
                 android:id="@+id/tvSensorPrimaryName"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:text=""
+                android:text="@string/sensor_primary_name"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
 
@@ -42,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
-                android:text=""/>
+                android:text="@string/sensor_secondary_name"/>
 
         </LinearLayout>
 
@@ -58,28 +57,49 @@
             android:textSize="14sp"
             android:visibility="gone"/>
 
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"
+            android:background="@android:color/background_dark"
+            android:visibility="gone"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="bottom"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingStart="20dp">
+
+            <TextView
+                android:id="@+id/tvSensorDataPrefix"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/data_prefix"
+                android:textSize="@dimen/sensors_preview_list_data_font_size"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tvSensorData"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:layout_weight="1"
-                android:textSize="14sp"/>
+                android:text="@string/data"
+                android:textSize="@dimen/sensors_preview_list_data_font_size"/>
 
             <TextView
                 android:id="@+id/tvSensorDataUnit"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:gravity="bottom"
+                android:text="@string/data_unit"
                 android:textAlignment="viewEnd"
                 tools:ignore="RtlCompat"/>
 
