--- a/app/src/main/res/layout/sensors_preview_list_entry.xml
+++ b/app/src/main/res/layout/sensors_preview_list_entry.xml
@@ -22,8 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvSensorPrimaryName"
@@ -39,8 +38,9 @@
             <TextView
                 android:id="@+id/tvSensorSecondaryName"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
+                android:gravity="top"
                 android:text="@string/sensor_secondary_name"/>
 
         </LinearLayout>
