--- a/app/src/main/res/layout/sensors_preview_list_entry.xml
+++ b/app/src/main/res/layout/sensors_preview_list_entry.xml
@@ -85,11 +85,11 @@
 
             <TextView
                 android:id="@+id/tvSensorData"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/data"
-                android:textSize="@dimen/sensors_preview_list_data_font_size"/>
+                android:textSize="@dimen/sensors_preview_list_data_font_size" />
 
             <TextView
                 android:id="@+id/tvSensorDataUnit"
