--- a/app/src/main/res/menu/recording_activity_menu.xml
+++ b/app/src/main/res/menu/recording_activity_menu.xml
@@ -6,5 +6,8 @@
         android:title="@string/set_storage_path"/>
     <item
         android:id="@+id/set_delay"
-        android:title="Set Recording Delay"/>
+        android:title="@string/set_recording_delay"/>
+    <item
+        android:id="@+id/start_or_stop"
+        android:title="@string/start_or_stop" />
 </menu>
