--- a/app/src/main/res/layout/sample_sensor_data_view.xml
+++ b/app/src/main/res/layout/sample_sensor_data_view.xml
@@ -1,5 +1,4 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,6 +12,6 @@
         app:exampleColor="#33b5e5"
         app:exampleDimension="24sp"
         app:exampleDrawable="?attr/actionModeCloseDrawable"
-        app:exampleString="Hello, SensorDataView"/>
+        app:exampleString="Hello, SensorDataView" />
 
 </FrameLayout>
