--- a/app/src/main/res/layout/sensor_details_activity.xml
+++ b/app/src/main/res/layout/sensor_details_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,7 +20,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:text="@string/back"/>
+            android:text="@string/back" />
 
         <Button
             android:id="@+id/bthRecode"
@@ -30,7 +29,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:text="@string/record"/>
+            android:text="@string/record" />
 
         <Button
             android:id="@+id/btnPause"
@@ -40,7 +39,7 @@
             android:layout_marginEnd="15dp"
             android:paddingEnd="15dp"
             android:paddingStart="15dp"
-            android:text="@string/pause"/>
+            android:text="@string/pause" />
 
     </LinearLayout>
 
@@ -48,7 +47,7 @@
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,21 +59,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView"/>
+            android:text="TextView" />
 
         <TextView
             android:id="@+id/tvValue_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView"/>
+            android:text="TextView" />
 
         <TextView
             android:id="@+id/tvValue_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView"/>
+            android:text="TextView" />
     </LinearLayout>
 
     <LinearLayout
@@ -94,7 +93,7 @@
             android:gravity="bottom"
             android:text="@string/sensor_primary_name"
             android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvSensorSecondaryName"
@@ -105,7 +104,7 @@
             android:gravity="clip_vertical"
             android:text="@string/sensor_secondary_name"
             android:textAlignment="viewEnd"
-            tools:ignore="RtlCompat"/>
+            tools:ignore="RtlCompat" />
     </LinearLayout>
 
 </LinearLayout>
