--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-    >
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,13 +22,13 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:text="0.0000000000000000AAAAA000000000000000000000 0.000000 0.000000"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/textView32"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"/>
+                android:text="TextView" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,13 +41,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"/>
+                    android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView" />
 
                 <TextView
                     android:id="@+id/textV4iew4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"/>
+                    android:text="TextView" />
             </LinearLayout>
         </LinearLayout>
 
@@ -66,7 +64,7 @@
                 android:layout_margin="10dp"
                 android:text="m/s2"
                 android:textAlignment="viewEnd"
-                android:visibility="visible"/>
+                android:visibility="visible" />
         </LinearLayout>
 
     </LinearLayout>
@@ -89,13 +87,13 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:text="TextView"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"/>
+                android:text="TextView" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -107,13 +105,13 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"/>
+                    android:text="TextView" />
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"/>
+                    android:text="TextView" />
             </LinearLayout>
         </LinearLayout>
 
@@ -130,7 +128,7 @@
                 android:layout_margin="10dp"
                 android:text="m/s2"
                 android:textAlignment="viewEnd"
-                android:visibility="visible"/>
+                android:visibility="visible" />
         </LinearLayout>
 
     </LinearLayout>
